// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<RadioField /> should add box if boxed class has been passed to Radio 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field pristine valid boxed"
    id="junipero-radio-field-«r8»"
    role="radiogroup"
  >
    <label
      class="checked"
      id="junipero-radio-field-«r8»-option-0-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«r8»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="1"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          1
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«r8»-option-1-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r8»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="2"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          2
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should change options if options props change accross the time: firm options 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field pristine valid"
    id="junipero-radio-field-«re»"
    role="radiogroup"
  >
    <label
      class=""
      id="junipero-radio-field-«re»-option-0-label"
      tabindex="0"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«re»-option-0-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="facebook"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          Facebook
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«re»-option-1-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«re»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="microsoft"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          Microsoft
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«re»-option-2-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«re»-option-2-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="apple"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          Apple
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«re»-option-3-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«re»-option-3-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="google"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          Google
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should change options if options props change accross the time: fruits options 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field pristine valid"
    id="junipero-radio-field-«re»"
    role="radiogroup"
  >
    <label
      class=""
      id="junipero-radio-field-«re»-option-0-label"
      tabindex="0"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«re»-option-0-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="peach"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          Peach
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«re»-option-1-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«re»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="orange"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          Orange
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«re»-option-2-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«re»-option-2-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="banana"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          Banana
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should change value if value prop change accross the time: orange checked 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field pristine valid"
    id="junipero-radio-field-«rd»"
    role="radiogroup"
  >
    <label
      class=""
      id="junipero-radio-field-«rd»-option-0-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«rd»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="peach"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          Peach
        </div>
      </div>
    </label>
    <label
      class="checked"
      id="junipero-radio-field-«rd»-option-1-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«rd»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="orange"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          Orange
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«rd»-option-2-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«rd»-option-2-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="banana"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          Banana
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should change value if value prop change accross the time: peach checked 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field pristine valid"
    id="junipero-radio-field-«rd»"
    role="radiogroup"
  >
    <label
      class="checked"
      id="junipero-radio-field-«rd»-option-0-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«rd»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="peach"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          Peach
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«rd»-option-1-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«rd»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="orange"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          Orange
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«rd»-option-2-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«rd»-option-2-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="banana"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          Banana
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should check if provided value is in options 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field pristine valid"
    id="junipero-radio-field-«r2»"
    role="radiogroup"
  >
    <label
      class="checked"
      id="junipero-radio-field-«r2»-option-0-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«r2»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="1"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          1
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«r2»-option-1-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r2»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="2"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          2
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should not display description if parseDescription return empty string 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field pristine valid"
    id="junipero-radio-field-«rc»"
    role="radiogroup"
  >
    <label
      class=""
      id="junipero-radio-field-«rc»-option-0-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«rc»-option-0-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="[object Object]"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          [object Object]
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should not trigger onChange if a radio if just this option is disabled: option 1 checked 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field pristine valid"
    id="junipero-radio-field-«r7»"
    role="radiogroup"
  >
    <label
      class="checked"
      id="junipero-radio-field-«r7»-option-0-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«r7»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="peach"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          [object Object]
        </div>
      </div>
    </label>
    <label
      class="disabled"
      id="junipero-radio-field-«r7»-option-1-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r7»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="Orange"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          [object Object]
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should not trigger onChange if a radio if just this option is disabled: option 1 checked again 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field pristine valid"
    id="junipero-radio-field-«r7»"
    role="radiogroup"
  >
    <label
      class="checked"
      id="junipero-radio-field-«r7»-option-0-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«r7»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="peach"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          [object Object]
        </div>
      </div>
    </label>
    <label
      class="disabled"
      id="junipero-radio-field-«r7»-option-1-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r7»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="Orange"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          [object Object]
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should not trigger onChange if a radio is clicked but its disabled: option 1 checked 1`] = `
<div>
  <div
    aria-disabled="true"
    aria-required="false"
    class="junipero radio-field disabled pristine valid"
    id="junipero-radio-field-«r6»"
    role="radiogroup"
  >
    <label
      class="checked disabled"
      id="junipero-radio-field-«r6»-option-0-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«r6»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="1"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          1
        </div>
      </div>
    </label>
    <label
      class="disabled"
      id="junipero-radio-field-«r6»-option-1-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r6»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="2"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          2
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should not trigger onChange if a radio is clicked but its disabled: option 1 checked again 1`] = `
<div>
  <div
    aria-disabled="true"
    aria-required="false"
    class="junipero radio-field disabled pristine valid"
    id="junipero-radio-field-«r6»"
    role="radiogroup"
  >
    <label
      class="checked disabled"
      id="junipero-radio-field-«r6»-option-0-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«r6»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="1"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          1
        </div>
      </div>
    </label>
    <label
      class="disabled"
      id="junipero-radio-field-«r6»-option-1-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r6»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="2"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          2
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should render 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field pristine valid"
    id="junipero-radio-field-«r0»"
    role="radiogroup"
  />
</div>
`;

exports[`<RadioField /> should render as many options as provided 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field pristine valid"
    id="junipero-radio-field-«r1»"
    role="radiogroup"
  >
    <label
      class=""
      id="junipero-radio-field-«r1»-option-0-label"
      tabindex="0"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r1»-option-0-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="1"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          1
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«r1»-option-1-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r1»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="2"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          2
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«r1»-option-2-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r1»-option-2-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="3"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          3
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«r1»-option-3-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r1»-option-3-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="5"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          5
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should set error state if onValidate function fails: invalid 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field dirty invalid"
    id="junipero-radio-field-«r9»"
    role="radiogroup"
  >
    <label
      class=""
      id="junipero-radio-field-«r9»-option-0-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r9»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="peach"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          [object Object]
        </div>
      </div>
    </label>
    <label
      class="checked"
      id="junipero-radio-field-«r9»-option-1-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«r9»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="orange"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          [object Object]
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should set error state if onValidate function fails: option 1 checked 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field pristine valid"
    id="junipero-radio-field-«r9»"
    role="radiogroup"
  >
    <label
      class="checked"
      id="junipero-radio-field-«r9»-option-0-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«r9»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="peach"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          [object Object]
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«r9»-option-1-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r9»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="orange"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          [object Object]
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should set error state if onValidate function fails: valid 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field dirty valid"
    id="junipero-radio-field-«r9»"
    role="radiogroup"
  >
    <label
      class="checked"
      id="junipero-radio-field-«r9»-option-0-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«r9»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="peach"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          [object Object]
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«r9»-option-1-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r9»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="orange"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          [object Object]
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should toggle check if a radio is clicked: option 1 checked 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field pristine valid"
    id="junipero-radio-field-«r3»"
    role="radiogroup"
  >
    <label
      class="checked"
      id="junipero-radio-field-«r3»-option-0-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«r3»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="1"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          1
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«r3»-option-1-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r3»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="2"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          2
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should toggle check if a radio is clicked: option 2 checked 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field dirty valid"
    id="junipero-radio-field-«r3»"
    role="radiogroup"
  >
    <label
      class=""
      id="junipero-radio-field-«r3»-option-0-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r3»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="1"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          1
        </div>
      </div>
    </label>
    <label
      class="checked"
      id="junipero-radio-field-«r3»-option-1-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«r3»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="2"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          2
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should trigger onChange when user hit enter and radio is focused: option 1 checked 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field pristine valid"
    id="junipero-radio-field-«r4»"
    role="radiogroup"
  >
    <label
      class="checked"
      id="junipero-radio-field-«r4»-option-0-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«r4»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="1"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          1
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«r4»-option-1-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r4»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="2"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          2
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should trigger onChange when user hit enter and radio is focused: option 2 checked 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field dirty valid"
    id="junipero-radio-field-«r4»"
    role="radiogroup"
  >
    <label
      class=""
      id="junipero-radio-field-«r4»-option-0-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r4»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="1"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          1
        </div>
      </div>
    </label>
    <label
      class="checked"
      id="junipero-radio-field-«r4»-option-1-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«r4»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="2"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          2
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should trigger onChange when user hit space and radio is focused: option 1 checked 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field pristine valid"
    id="junipero-radio-field-«r5»"
    role="radiogroup"
  >
    <label
      class="checked"
      id="junipero-radio-field-«r5»-option-0-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«r5»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="1"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          1
        </div>
      </div>
    </label>
    <label
      class=""
      id="junipero-radio-field-«r5»-option-1-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r5»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="2"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          2
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should trigger onChange when user hit space and radio is focused: option 2 checked 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field dirty valid"
    id="junipero-radio-field-«r5»"
    role="radiogroup"
  >
    <label
      class=""
      id="junipero-radio-field-«r5»-option-0-label"
      tabindex="-1"
    >
      <input
        aria-checked="false"
        aria-labelledby="junipero-radio-field-«r5»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="1"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          1
        </div>
      </div>
    </label>
    <label
      class="checked"
      id="junipero-radio-field-«r5»-option-1-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«r5»-option-1-label"
        role="radio"
        tabindex="-1"
        type="radio"
        value="2"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          2
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<RadioField /> should use given parse title, description and value if function are provided 1`] = `
<div>
  <div
    aria-disabled="false"
    aria-required="false"
    class="junipero radio-field pristine valid"
    id="junipero-radio-field-«rb»"
    role="radiogroup"
  >
    <label
      class="checked"
      id="junipero-radio-field-«rb»-option-0-label"
      tabindex="0"
    >
      <input
        aria-checked="true"
        aria-labelledby="junipero-radio-field-«rb»-option-0-label"
        checked=""
        role="radio"
        tabindex="-1"
        type="radio"
        value="peach"
      />
      <div
        class="inner"
      />
      <div
        class="label"
      >
        <div
          class="title"
        >
          Delicious peach
        </div>
        <div
          class="description"
        >
          this is a delicious peach
        </div>
      </div>
    </label>
  </div>
</div>
`;
